# cose-map

./: .gitignore  README.md  dump-semantic_database.sql
cosemap/cosemap_msgs/: CMakeLists.txt  package.xml
cosemap/cosemap_msgs/msg/: SemanticBox.msg  SemanticOctomap.msg  SemanticPcl.msg
cosemap/cosemap_tools/: CMakeLists.txt  package.xml
cosemap/cosemap_tools/include/cosemap_tools/base_node/: base_node.h
cosemap/cosemap_tools/include/cosemap_tools/inference_utils/: inference_utils.h
cosemap/cosemap_tools/include/cosemap_tools/map_loader/: map_loader.h
cosemap/cosemap_tools/include/cosemap_tools/semantic_utils/: semantic_utils.h
cosemap/cosemap_tools/include/cosemap_tools/sql_helper/: sql_helper.h  sql_helper_utils.h
cosemap/cosemap_tools/include/cosemap_tools/visualizer/: database_visualizer.h
cosemap/cosemap_tools/src/base_node/: base_node.cpp
cosemap/cosemap_tools/src/inference_utils/: inference_utils.cpp
cosemap/cosemap_tools/src/map_loader/: map_loader.cpp
cosemap/cosemap_tools/src/semantic_utils/: semantic_utils.cpp
cosemap/cosemap_tools/src/sql_helper/: sql_helper.cpp
cosemap/cosemap_tools/src/visualizer/: database_visualizer.cpp
cosemap/octomap_pkgs/octomap/dynamicEDT3D/lib/: libdynamicedt3d.so.1.9.0
cosemap/octomap_pkgs/octomap/dynamicEDT3D/lib/cmake/dynamicEDT3D/: dynamicEDT3DConfig.cmake  dynamicEDT3DTargets.cmake
cosemap/octomap_pkgs/octomap/octomap/include/octomap/: SemanticOcTree.h
cosemap/octomap_pkgs/octomap/octomap/lib/: liboctomap.so.1.9.0  liboctomath.so.1.9.0
cosemap/octomap_pkgs/octomap/octomap/lib/cmake/octomap/: octomap-config.cmake  octomap-targets.cmake
cosemap/octomap_pkgs/octomap/octomap/src/: CMakeLists.txt  ColorOcTree.cpp  SemanticOcTree.cpp
cosemap/octomap_pkgs/octomap_mapping/octomap_server/: CMakeLists.txt  package.xml
cosemap/octomap_pkgs/octomap_mapping/octomap_server/include/octomap_server/: octomap_server.hpp  semantic_octomap_server.hpp
cosemap/octomap_pkgs/octomap_mapping/octomap_server/launch/: octomap_mapping.launch.xml  semantic_octomap.launch.xml
cosemap/octomap_pkgs/octomap_mapping/octomap_server/src/: octomap_server.cpp  semantic_octomap_server.cpp
cosemap/octomap_pkgs/octomap_msgs/: CMakeLists.txt
cosemap/octomap_pkgs/octomap_msgs/include/octomap_msgs/: conversions.h
cosemap/octomap_pkgs/octomap_rviz_plugins/: CMakeLists.txt  package.xml  plugins_description.xml
cosemap/octomap_pkgs/octomap_rviz_plugins/include/octomap_rviz_plugins/: occupancy_grid_display.hpp
cosemap/octomap_pkgs/octomap_rviz_plugins/src/: occupancy_grid_display.cpp
cosemap/semantic_database/: CMakeLists.txt  package.xml
cosemap/semantic_database/include/semantic_database/: map_visualizer_node.h  semantic_database_node.h
cosemap/semantic_database/src/map_visualizer_node/: map_visualizer_node.cpp  run_map_visualizer_node.cpp
cosemap/semantic_database/src/semantic_database_node/: run_semantic_database_node.cpp  semantic_database_node.cpp
cosemap/semantic_pcl/: CMakeLists.txt  package.xml
cosemap/semantic_pcl/include/semantic_pcl/: semantic_pcl.h  semantic_pcl_node.h
cosemap/semantic_pcl/src/: run_semantic_pcl_node.cpp
cosemap/semantic_pcl/src/semantic_pcl_node/: semantic_pcl.cpp  semantic_pcl_node.cpp
cosemap_launch/: CMakeLists.txt  package.xml
cosemap_launch/config/: cosemap.yaml  cosemap_copy.yaml  db_utils.yaml
cosemap_launch/config/rviz/: cosemap.rviz
cosemap_launch/launch/: cosemap.launch.py  rviz.launch.py
cosemap_launch/utils/: download_and_convert_network_to_onnx.py  truncate_tables.py
docker/: 0_build.sh  0_push.sh  1_pull.sh  2_run.sh  3_attach.sh  4_kill.sh  Dockerfile.cosemap  Dockerfile.cosemap_mariadb  Dockerfile.cosemap_opencv  Dockerfile.cosemap_pcl  Dockerfile.cosemap_ros
docker/scripts/: install_mariadb.sh  install_mariadb_server_host.sh  install_opencv.sh  install_pcl.sh  install_ros.sh
