<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cosemap_tools</name>
  <version>0.0.0</version>
  <description>The cosemap tools package</description>


  <maintainer email="riccardo.dimajo@gmail.com">aitronik</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <depend>PCL</depend>
  <depend>OpenCV</depend>
  <depend>octomap</depend>
  <depend>visualization_msgs</depend>
  <depend>Boost</depend>

</package>