<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>semantic_database</name>
    <version>0.0.0</version>
    <description>The octomap database package</description>


    <maintainer email="riccardo.dimajo@gmail.com">aitronik</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend> 
    <!-- <depend>ros_utils</depend> -->
    <depend>OCTOMAP</depend>
    <depend>cosemap_msgs</depend>
    <depend>std_msgs</depend>
    <depend>octomap_msgs</depend>
    <depend>octomap_ros</depend>
    <depend>pcl</depend>
    <depend>semantic_pcl</depend>
    <depend>cosemap_tools</depend>
    <depend>sensor_msgs</depend>
    <depend>visualization_msgs</depend>
    <!-- <depend>yaml-cpp</depend> -->



    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
      </export>

</package>