<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semantic_pcl</name>
  <version>0.0.0</version>
  <description>The semantic point cloud package</description>


  <maintainer email="riccardo.dimajo@gmail.com">aitronik</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <depend>rclcpp</depend> 
  <!-- <depend>ros_utils</depend> -->
  <depend>std_msgs</depend> 
  <depend>sensor_msgs</depend> 
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>  
  <depend>cosemap_tools</depend>
  <depend>cosemap_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>cv_bridge</depend>
  <depend>PCL</depend>
  <depend>Boost</depend>


 
</package>